# chat-langchain

./: .dockerignore  .env.example  .env.gcp.yaml.example  .env.template  .gitignore  .vercelignore  AGENTS.md  BackendDockerfile  CONCEPTS.md  DEPLOYMENT.md  Dockerfile  DockerfilePgVector  INGEST.md  LANGGRAPH_API_USE_CASES.md  LANGSMITH.md  LEARNING_STEPS.md  LICENSE  MODIFY.md  Makefile  PRODUCTION.md  Procfile  README.md  RECORDS_MGMT.md  RUN_LOCALLY.md  _index.py  agent.py  app.py  callback.py  chain.py  chunks.json  cloudbuild.yaml  conftest.py  constants.py  custom_readthedocs.py  deploy_cloud_run.sh  docker-compose-local.yml  docker-compose.yml  evaluate_agent.py  evaluate_openai_functions.py  fly.toml  (+28 more)
.circleci/: config.yml
.cursor/plans/: migrate-to-local-weaviate-1df91472.plan.md
.github/workflows/: clear-and-update-index.yml  deploy-cloud-run.yaml  deploy-production.yaml  deploy-production.yml  eval-js.yml  eval.yml  lint.yml  main.yml  test-backend.yml  update-index.yml  update_kaggle_dataset.yml
_scripts/: clear_index.py  evaluate_chains.py  evaluate_chains_agent.py  evaluate_chains_improved_chain.py  evaluate_chat_langchain.py  evaluate_doc_retrieval.csv  evaluate_doc_retrieval.py  evaluate_doc_retrieval__model_llm__2024-03-12T20:59:00.865114.csv  evaluate_doc_retrieval__model_llm__2024-03-15T17:58:10.862451.csv  evaluate_doc_retrieval__model_openai_functions__2024-03-15T17:59:07.324280.csv  evaluate_overall_performance.py  evaluate_tool.csv  evaluate_tools.csv  evaluate_tools.py  evaluate_tools_SOB.csv  evaluate_tools__model_openai_functions__2024-04-17T131008.857708.csv  evaluation_False.csv  evaluation_True.csv  update_s3_metadata.sh  utils.py
app/: callback.py  prism.css  query_data.py  tailwind.css
app/assets/: output.css  (+1 more)
archive/: app.py  chain.py  ingest.py  ingest.sh  ingest_examples.py  requirements.txt
assets/: style.css
backend/: ### JS Docs.md  chain.py  configuration.py  constants.py  embeddings.py  graph.py  graph_chain.py  ingest.py  main.py  my_chain.py  parser.py  query_wea.py  retrieval.py  server.py  stock_utils.py  utils.py
backend-js/: .gitignore  .nvmrc  CHANGELOG.md  QUICK_START.md  README.md  env.example  langgraph.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
chains/: rag_chain.py
chat-langchain/: ..env.local  .gitignore  Dockerfile  FrontendDockerfile  package-lock.json  package.json
chat_gpt_implementation/: main.py  query_data.py
chat_langchain_engine/: __init__.py  chain.py
connectors/: langsmith.py  mcp.py
crawler/: easyday_crawler  easyday_crawler.py  i3-crawler.py  i3_crawler.py  newsfeed.py  trude_crawler  trude_crawler.py
croptalk/: agent_prompt.py  chromadb_utils.py  create_doc_data.py  create_test_dataset.py  create_vectorstore.ipynb  document_retriever.py  evaluate_agent.py  evaluate_llm.py  evaluate_overall_performance.py  load_data.py  model.py  model_agent.py  model_llm.py  model_openai_functions.py  prepare_knowledge_registry.ipynb  prompt_tools.py  prompts_agent.py  prompts_llm.py  retriever.py  tools.py  utils.py  weaviate_utils.py
dataset/: chunks.json  raw_docs.json
datastore/: factory.py
docker-images/: start-reload.sh  start.sh
docs/: BLOG_STRATEGY_SUMMARY.md  EVALS.md  FRONTEND_ARCHITECTURE.md  GOAL_LEARNING.md  LEARNING_STEPS.md  MODIFY.md  SETUP_DEPS.MD  langgraph-platform.json
frontend/: .dockerignore  .env.example  .env.local.example  .gitignore  .vercelignore  Dockerfile  auth.ts  cloudbuild.yaml  components.json  middleware.ts  next.config.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
models/: api.py  config.py  models.py  schemas.py
prompts/: prompts.py
scripts/: dowload_uni_polcies.py  download_legislation.py  ingest.py  legislation.csv  policies.csv  push_docs_agent_prompt.py  push_guardrails_prompt.py
secrets/: .env.shared
services/: chunks.py  file.py  openai.py
streaming_example/: Makefile  README.md  callback.py  ingest.py  ingest_langchain_docs.py  main.py  query_data.py  requirements.txt
templates/: index.html
terraform/: backend.tf  main.tf
tests/: test_callback.py
(+401 files in other folders)
