[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chat-langchain"
version = "0.1.1"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "SN", email = "6432132+samnoyes@users.noreply.github.com" }
]
dependencies = [
    "langchain>=0.3.0",
    "langsmith==0.4.9",
    "langchain-google-genai>=2.1.2",
    "langchain-core>=0.3.10",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.3.12",
    "langchain-anthropic>=0.3.10",
    "langchain-weaviate>=0.0.3",
    "langgraph>=0.4.5",
    "beautifulsoup4>=4.12.2",
    "weaviate-client>=4.0.0",
    "lxml>=4.9.3",
    "voyageai>=0.1.4",
    "pillow>=10.2.0",
    "psycopg2-binary>=2.9.9",
    "langgraph-cli[inmem]>=0.3.6",
    "ipykernel>=6.30.1",
    "pytest>=8.4.1",
    "deepagents>=0.0.4",
]

[project.optional-dependencies]
dev = [
    "langgraph-sdk>=0.1.61",
    "pytest>=7.3.0",
    "ruff>=0.2.2",
    "pandas>=2.2.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv.sources]
deepagents = { path = "../deepagents" }
